# TradeCRM

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml
app/backend/: .env.example  .gitignore  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
app/backend/alembic/: env.py
app/backend/alembic/versions/: 0139aeb56ce6_add_leads_and_preferences.py  0f85e49321ff_enrich_entities_company_contact_.py  332cc0a096b1_add_email_accounts.py  44a58bc655f3_add_product_trade_fields.py  4d2176092dbf_add_email_accounts.py  5d865cd221d5_add_message_templates.py  acd153b91ee4_add_whitelist_and_user_approval.py  b653ae7907d2_merge_heads.py  ca08c96316c1_add_commodity_references.py  cf8aad188dbc_add_catalog_pricing_ports.py  d3ff539d1e1a_expand_entities_company_contact_.py  e4a9aea27ad1_add_display_id_expand_opportunity_source.py  e521f016f212_initial_schema.py  f9a3bd8bdd6e_add_shipments_interests.py
app/backend/app/: config.py  database.py  logging_config.py  main.py
app/backend/app/agents/: analytics_agent.py  base.py  composer_agent.py  insights_agent.py  interest_inference_agent.py  lead_classifier.py  (+4 more)
app/backend/scripts/: seed_mock_data.py
app/backend/tests/: conftest.py  test_agents.py  test_api_auth.py  test_api_leads.py  test_api_phase3.py  test_api_phase4.py  test_api_phase5.py  test_config.py  test_enums.py  test_full_system.py  test_health.py  test_integrations.py  test_lead_classifier.py  test_logging.py  test_models.py  test_schemas.py  test_websocket_manager.py  test_whatsapp.py
(+158 files in other folders)
